--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "echoo": "file:",
     "lucide-react": "^0.487.0",
     "qrcode": "^1.5.4",
+    "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
+    "react-barcode": "^1.6.1",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
