--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "echoo": "file:",
     "lodash": "^4.17.21",
     "lucide-react": "^0.487.0",
+    "mega": "^0.2.0",
+    "megajs": "^1.3.7",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
