--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
     "echoo": "file:",
+    "idb": "^8.0.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.487.0",
     "mega": "^0.2.0",
