--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "react-window": "^1.8.11",
     "web-vitals": "^2.1.4"
   },
