--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-icons": "^1.11.3",
     "echoo": "file:",
     "idb": "^8.0.3",
+    "jsqr": "^1.4.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.487.0",
     "mega": "^0.2.0",
